@@ -78,7 +78,6 @@ prepStmnt <- function(statementNm, dsccon){
 
                traffic_volume                       = { rs <- try(dbSendQuery(dsccon, "PREPARE traffic_volume (INTEGER, INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ, TEXT) AS SELECT starttime AS x, 'dns-' || key1 || '-queries-received-' || lower(key2) AS key, sum(value) AS y FROM dsc.data d WHERE server_id=$1 AND plot_id=$2 AND starttime>=$4 AND starttime<=$5 AND d.node_id = ANY (string_to_array($6, ',')::integer[]) GROUP BY x, key UNION SELECT starttime AS x, 'dns-' || key1 || '-responses-sent-' || lower(key2) AS key, sum(value) AS y FROM dsc.data d WHERE server_id=$1 AND plot_id=$3 AND starttime>=$4 AND starttime<=$5 AND d.node_id = ANY (string_to_array($6, ',')::integer[]) GROUP BY x, key;"))},
                traffic_volume_all_nodes             = { rs <- try(dbSendQuery(dsccon, "PREPARE traffic_volume_all_nodes (INTEGER, INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ) AS SELECT starttime AS x, 'dns-' || key1 || '-queries-received-' || lower(key2) AS key, sum(value) AS y FROM dsc.data WHERE server_id=$1 AND plot_id=$2 AND starttime>=$4 AND starttime<=$5 GROUP BY x, key UNION SELECT starttime AS x, 'dns-' || key1 || '-responses-sent-' || lower(key2) AS key, sum(value) AS y FROM dsc.data WHERE server_id=$1 AND plot_id=$3 AND starttime>=$4 AND starttime<=$5 GROUP BY x, key;"))},
-               traffic_query_response_difference_all_nodes = { rs <- try(dbSendQuery(dsccon, "PREPARE traffic_volume_all_nodes (INTEGER, INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ) AS SELECT starttime AS x, 'dns-' || key1 || '-queries-received-' || lower(key2) AS key, sum(value) AS y FROM dsc.data WHERE server_id=$1 AND plot_id=$2 AND starttime>=$4 AND starttime<=$5 GROUP BY x, key UNION SELECT starttime AS x, 'dns-' || key1 || '-responses-sent-' || lower(key2) AS key, sum(value) AS y FROM dsc.data WHERE server_id=$1 AND plot_id=$3 AND starttime>=$4 AND starttime<=$5 GROUP BY x, key;"))},
                # Following two statements are used to generate yaml data, but not for a visible plot
                traffic_sizes                        = { rs <- try(dbSendQuery(dsccon, "PREPARE traffic_sizes (INTEGER, INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ, TEXT) AS SELECT key1 || '-request-sizes' AS key, ((key2::integer/16) * 16) + 7.5 AS x, sum(value) AS y FROM dsc.data d WHERE server_id=$1 AND plot_id=$2 AND starttime>=$4 AND starttime<=$5  AND d.node_id = ANY (string_to_array($6, ',')::integer[]) GROUP BY key, x UNION SELECT key1 || '-response-sizes' AS key, ((key2::integer/16) * 16) + 7.5 AS x, sum(value) AS y FROM dsc.data d WHERE server_id=$1 AND plot_id=$3 AND starttime>=$4 AND starttime<=$5  AND d.node_id = ANY (string_to_array($6, ',')::integer[]) GROUP BY key, x ORDER BY x;"))},
                traffic_sizes_all_nodes              = { rs <- try(dbSendQuery(dsccon, "PREPARE traffic_sizes_all_nodes (INTEGER, INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ) AS SELECT key1 || '-request-sizes' AS key, ((key2::integer/16) * 16) + 7.5 AS x, sum(value) AS y FROM dsc.data WHERE server_id=$1 AND plot_id=$2 AND starttime>=$4 AND starttime<=$5  GROUP BY key, x UNION SELECT key1 || '-response-sizes' AS key, ((key2::integer/16) * 16) + 7.5 AS x, sum(value) AS y FROM dsc.data WHERE server_id=$1 AND plot_id=$3 AND starttime>=$4 AND starttime<=$5 GROUP BY key, x ORDER BY x;"))},
